--- a/pom.xml
+++ b/pom.xml
@@ -218,17 +218,22 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>1.4.1</version>
 				<executions>
 					<execution>
-						<configuration>
-							<rules>
-								<DependencyConvergence />
-							</rules>
-						</configuration>
-						<goals>
-							<goal>enforce</goal>
-						</goals>
+						<id>dependency-convergence</id>
+                    <phase>install</phase>
+                    <goals>
+                        <goal>enforce</goal>
+                    </goals>
+                    <configuration>
+                        <rules>
+                            <DependencyConvergence />
+                        </rules>
+                        <fail>true</fail>
+                    </configuration>
 					</execution>
 				</executions>
 			</plugin>
