--- a/pom.xml
+++ b/pom.xml
@@ -158,13 +158,13 @@
 		       <artifactId>poi</artifactId>
 		        <version>3.9</version>
 		  </dependency>
-		 
+
 		 <dependency>
 		      <groupId>org.apache.poi</groupId>
 		       <artifactId>poi-ooxml</artifactId>
 		      <version>3.9</version>
 		  </dependency>
-		 
+
 		 <dependency>
 		      <groupId>commons-beanutils</groupId>
 		        <artifactId>commons-beanutils</artifactId>
@@ -186,6 +186,11 @@
 	<build>
 		<plugins>
 			<plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>1.1.3</version>
+      </plugin>
+			<plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
 				<version>1.1.3</version>
@@ -197,6 +202,9 @@
 						<configuration>
 							<outputDirectory>target/generated-sources/java</outputDirectory>
 							<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+							<processTypes>
+						    <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+						  </processTypes>
 						</configuration>
 					</execution>
 				</executions>
